--- a/tests/functional/rbac/test_business_permissions_data/provider/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/provider/config.yaml
@@ -14,6 +14,7 @@
   name: test_provider
   version: 1.3
   edition: community
+  config_group_customization: true
 
   config: &common_config
   - name: boolean
