--- a/tests/functional/rbac/test_business_permissions_data/second_provider/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/second_provider/config.yaml
@@ -14,6 +14,7 @@
   name: test_provider
   version: 1.4
   edition: community
+  config_group_customization: true
   upgrade:
     - versions:
         min: 0.4
