--- a/tests/functional/rbac/test_business_permissions_data/cluster/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/cluster/config.yaml
@@ -15,6 +15,7 @@
   version: 1.5
   edition: community
   config_group_customization: true
+  allow_maintenance_mode: true
 
   config: &common_config
   - name: boolean
