ADCM-2072 MM tests calibration

--- a/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
@@ -15,6 +15,7 @@
   version: 1.6
   edition: community
   config_group_customization: true
+  allow_maintenance_mode: true
   upgrade:
     - versions:
         min: 0.4
