ADCM-2771 fix MMmode class name; check perm in put/patch methods

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1491,7 +1491,7 @@ roles:
       parametrized_by:
         - host
       module_name: rbac.roles
-      class_name: ModelRole
+      class_name: ObjectRole
       apps:
         - label: cm
           models:
