ADCM-2794 Extra test for inventory of action with `hc_acl`

--- a/tests/functional/maintenance_mode/bundles/cluster_mm_allowed/config.yaml
+++ b/tests/functional/maintenance_mode/bundles/cluster_mm_allowed/config.yaml
@@ -112,6 +112,7 @@
 
     change:
       <<: *job
+      allow_in_maintenance_mode: true
       hc_acl:
         - service: hc_acl_service
           component: first_component
