--- a/tests/ui_tests/test_admin_page_data/cluster_with_services/config.yaml
+++ b/tests/ui_tests/test_admin_page_data/cluster_with_services/config.yaml
@@ -14,6 +14,7 @@
   name: test_cluster
   version: 1.5
   edition: community
+  allow_maintenance_mode: true
   config: &config
     str_param:
       type: string
