--- a/tests/ui_tests/test_host_page_data/cluster/config.yaml
+++ b/tests/ui_tests/test_host_page_data/cluster/config.yaml
@@ -14,6 +14,7 @@
   name: test_cluster
   version: 1.5
   edition: community
+  allow_maintenance_mode: true
 
 - type: service
   name: test_service
