--- a/tests/ui_tests/test_host_page_data/provider/config.yaml
+++ b/tests/ui_tests/test_host_page_data/provider/config.yaml
@@ -26,6 +26,7 @@
       script_type: ansible
       script: ./fake_init.yaml
       display_name: "Init"
+      allow_in_maintenance_mode: true
       states:
         available:
           - created
@@ -34,6 +35,7 @@
     reinit:
       <<: *job
       display_name: "Reinit"
+      allow_in_maintenance_mode: false
       states:
         available:
           - running
