--- a/tests/functional/test_upgrade_actions_data/hc_acl/succeed.yaml
+++ b/tests/functional/test_upgrade_actions_data/hc_acl/succeed.yaml
@@ -10,31 +10,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- type: cluster
-  version: 1.2
-  name: test_cluster
+- name: Succeed action
+  hosts: localhost
+  connection: local
+  gather_facts: no
 
-  config: &config
-    - name: somestring
-      type: string
-      required: false
-    - name: someint
-      type: integer
-      default: 12
+  tasks:
+    - name: dummy action
+      debug:
+        msg: "Some message"
 
-- type: service
-  version: 2.3
-  name: test_service
-
-  config: *config
-
-  components:
-    test_component:
-      config: *config
-
-- type: service
-  version: 1.2
-  name: will_be_removed
-
-  components:
-    willbegone:
