--- a/tests/functional/test_upgrade_actions_data/validation/invalid/non_existent_service_in_regular_action/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/validation/invalid/non_existent_service_in_regular_action/config.yaml
@@ -10,24 +10,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- type: provider
+- type: cluster
   version: 1.3
-  name: test_provider
+  name: test_cluster
 
-  upgrade:
-    - name: hc_acl_in_provider
-      versions:
-        min: 0.1
-        max: 1.3
-      scripts:
-        - name: switch action
-          script: bundle_switch
-          script_type: internal
+  actions:
+    start:
+      type: job
+      script: ./actions.yaml
+      script_type: ansible
       hc_acl:
-        - service: test_service
+        - service: another_service
           component: test_component
           action: add
 
-- type: host
-  version: 0.3
-  name: test_host
+- type: service
+  version: 3.4
+  name: test_service
+
+  components:
+    test_component:
