ADCM-2846 Case with early failure after the switch added to negative `hc_acl` cases

--- a/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
@@ -71,11 +71,22 @@
         - <<: *action
           name: second action before switch
         - <<: *bundle_switch
-        - <<: *fail_action
+        - <<: *action
           name: first action after switch
         - <<: *fail_action
           name: second action after switch
-          script: ./fail.yaml
+
+    - <<: *upgrade
+      name: fail on first action after switch
+      scripts:
+        - *action
+        - <<: *action
+          name: second action before switch
+        - <<: *bundle_switch
+        - <<: *fail_action
+          name: first action after switch
+        - <<: *action
+          name: second action after switch
 
   config: &config
     - name: somestring
