--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-adcm_client>=adcm_client-2022.4.26.16
-adcm-pytest-plugin~=4.17
+adcm_client>=adcm_client-2022.6.2.8
+adcm-pytest-plugin~=4.18.0rc94
 attr
 allure-pytest
 docker
