--- a/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
@@ -21,6 +21,8 @@
       versions:
         min: 0.1
         max: 1.3
+      states:
+        available: any
       scripts:
         - &action
           name: first action before switch
