ADCM-2871 Test that only finished tasks aren't removed from DB

--- a/tests/functional/test_rotation_data/cluster/config.yaml
+++ b/tests/functional/test_rotation_data/cluster/config.yaml
@@ -40,6 +40,13 @@
       states:
         available: any
 
+    sleep:
+      type: job
+      script_type: ansible
+      script: ./sleep.yaml
+      states:
+        available: any
+
 - type: service
   name: test_service
   version: 2
