ADCM-2846 Configs fixed

--- a/tests/functional/test_upgrade_actions_data/successful/old/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/successful/old/config.yaml
@@ -36,5 +36,12 @@
   version: 1.2
   name: will_be_removed
 
+  config: &cfg
+    - name: param
+      type: string
+      default: pampam
+
   components:
     willbegone:
+      config: *cfg
+
