--- a/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/hc_acl/config.yaml
@@ -23,6 +23,7 @@
         max: 1.3
       states:
         available: any
+        on_success: ready_to_upgrade
       scripts:
         - &action
           name: first action before switch
@@ -114,6 +115,8 @@
 - type: service
   version: 2.34
   name: new_service
+
+  config: *config
 
   components:
     some_component:
