--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -7,6 +7,7 @@ docker
 jsonschema
 pylint_runner
 pytest
+pytest-asyncio
 pytest-lazy-fixture
 pytest-xdist
 pytest-rerunfailures
@@ -19,3 +20,4 @@ selenium~=3.141.0
 multipledispatch
 rstr
 genson
+websockets
