--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+asyncio_mode = auto
+
 markers =
     full: mark a test to be excluded from ordinary branch test run
     smoke: mark tests that covers the very basic functionality
