--- a/tests/functional/test_upgrade_actions_data/hc_acl/fail.yaml
+++ b/tests/functional/test_upgrade_actions_data/hc_acl/fail.yaml
@@ -10,38 +10,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- type: cluster
-  version: 1.2
-  name: test_cluster
+- name: Fail action
+  hosts: localhost
+  connection: local
+  gather_facts: no
 
-  config: &config
-    - name: somestring
-      type: string
-      required: false
-    - name: someint
-      type: integer
-      default: 12
-
-- type: service
-  version: 2.3
-  name: test_service
-
-  config: *config
-
-  components:
-    test_component:
-      config: *config
-
-- type: service
-  version: 1.2
-  name: will_be_removed
-
-  config: &cfg
-    - name: param
-      type: string
-      default: pampam
-
-  components:
-    willbegone:
-      config: *cfg
-
+  tasks:
+    - name: fail
+      fail:
+        msg: ""
+      when: "{{ 1 == 1 }}"
