--- a/assemble/base/requirements-base.txt
+++ b/assemble/base/requirements-base.txt
@@ -1,18 +1,18 @@
-# ansible==2.8.3
-git+https://github.com/arenadata/ansible.git@v2.8.8-p4
 coreapi
-django
+django<4.0
 django-cors-headers
 django-filter
+django-guardian
 django-rest-swagger
 djangorestframework
 drf-flex-fields==0.9.1
 drf-extensions
-django-guardian
 social-auth-app-django
-git+git://github.com/arenadata/django-generate-secret-key.git
+git+https://github.com/arenadata/django-generate-secret-key.git
+virtualenv
 # TODO jinja2 and markupsafe should be unpinned after https://arenadata.atlassian.net/browse/ADCM-2089 fixup
 Jinja2==2.11.3
+jsonschema
 MarkupSafe==1.1.1
 markdown
 mitogen
@@ -20,7 +20,6 @@ pyyaml
 ruyaml
 toml
 uwsgi
-jsonschema
 version_utils
 ruyaml
 yspec
@@ -28,6 +27,15 @@ yspec
 apache-libcloud
 jmespath
 lxml
-pycrypto
+# ansible==2.8.8
+git+https://github.com/arenadata/ansible.git@v2.8.8-p5
+pycryptodome
+# YCC bundle libs (yandexcloud requirements)
+cryptography>=2.8
+grpcio>=1.38.1
+googleapis-common-protos>=1.53.0
+pyjwt>=1.7.1
+requests>=2.22.0
+six>=1.14.0
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
 adwp-events==0.1.8
