--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
 adcm_client>=adcm_client-2022.6.2.8
-adcm-pytest-plugin~=4.18.0rc94
+adcm-pytest-plugin~=4.19.0rc95
 attr
 allure-pytest
 docker
@@ -12,6 +12,7 @@ pytest-xdist
 pytest-rerunfailures
 pytest-timeout
 pytest-check
+python-ldap~=3.4
 pyyaml
 requests
 requests-toolbelt
