ADCM-2890 fix password field type

--- a/conf/adcm/config.yaml
+++ b/conf/adcm/config.yaml
@@ -129,7 +129,7 @@
           display_name: "LDAP Password"
           description: |
             Password for access to the LDAP server of the user specified in the "LDAP User" field.
-          type: string
+          type: password
         - name: "user_search_base"
           display_name: "User search base"
           description: |
