--- a/conf/adcm/config.yaml
+++ b/conf/adcm/config.yaml
@@ -121,12 +121,12 @@
             The URI of the LDAP server.
           type: string
         - name: "ldap_user"
-          display_name: "LDAP User"
+          display_name: "Bind DN"
           description: |
             The distinguished name (DN) of the user that is used to connect to the LDAP server. For example: "cn=admin,dc=ad,dc=ranger-test".
           type: string
         - name: "ldap_password"
-          display_name: "LDAP Password"
+          display_name: "Bind Password"
           description: |
             Password for access to the LDAP server of the user specified in the "LDAP User" field.
           type: string  # TODO: password
@@ -135,34 +135,41 @@
           description: |
             The distinguished name (DN) of the directory object from which to search for entries. For example: "ou=Peoples,dc=ad,dc=ranger-test".
           type: string
-        - name: "user_search_filter"
-          display_name: "User search filter"
+        - name: "user_object_class"
+          display_name: "User object class"
           description: |
-            User attribute and its value for which the search is performed.
-          type: variant
-          source:
-            type: inline
-            strict: False
-            value:
-              - "sAMAccountName=%(user)s"
-              - "uid=%(user)s"
-          default: "sAMAccountName=%(user)s"
+            Object class to identify user entries.
+          type: string
+          default: "user"
+        - name: "user_name_attribute"
+          display_name: "User name attribute"
+          description: |
+            Attribute from user entry that would be treated as user name.
+          type: string
+          default: "sAMAccountName"
         - name: "group_search_base"
           display_name: "Group search base"
           description: |
             The distinguished name (DN) of the directory object from which to search for entries. For example: "ou=Groups,dc=ad,dc=ranger-test".
           type: string
-        - name: "group_search_filter"
-          display_name: "Group search filter"
+        - name: "group_object_class"
+          display_name: "Group object class"
           description: |
-            Group attribute and its value for which the search is performed.
-          type: variant
-          source:
-            type: inline
-            strict: False
-            value:
-              - "(objectClass=*)"
-          default: "(objectClass=*)"
+            Object class to identify group entries.
+          type: string
+          default: "group"
+        - name: "group_name_attribute"
+          display_name: "Group name attribute"
+          description: |
+            Attribute from group entry that would be treated as group name.
+          type: string
+          default: "cn"
+        - name: "group_member_attribute_name"
+          display_name: "Group member attribute name"
+          description: |
+            Attribute from group entry that is list of members.
+          type: string
+          default: "member"
         - name: "sync_interval"
           display_name: "Sync interval"
           description: |
