--- a/conf/adcm/config.yaml
+++ b/conf/adcm/config.yaml
@@ -107,4 +107,4 @@
           default: 0
           min: 0
           description: |
-            You can set the time (number of days) after which the Objects configuration will be deleted from the database.
+            You can set the time (number of days) after which the Objects configuration will be deleted from the database. 0 is infinite storing.
