--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,7 +2,7 @@
 # TODO: set correct adcm_client version
 # TODO:   after merging https://github.com/arenadata/adcm_client/pull/120
 #adcm_client>=adcm_client-2022.6.2.8
-git+https://github.com/arenadata/adcm_client.git@ADCM-2925
+adcm_client==2022.6.28.15.dev0+adcm.2925
 # END TODO
 adcm-pytest-plugin~=4.19.0rc95
 attr
