--- a/tests/ui_tests/test_cluster_list_page_data/upgradable_cluster_v2/config.yaml
+++ b/tests/ui_tests/test_cluster_list_page_data/upgradable_cluster_v2/config.yaml
@@ -100,6 +100,76 @@
           type: integer
           default: 122
 
+    - <<: *upgrade
+      name: upgrade_with_hc_acl_and_disclaimer
+      versions:
+        min: 0.1
+        max: 1.5
+      ui_options:
+        disclaimer: "Are you really want to click me?"
+      scripts:
+        - <<: *action
+          name: first_action
+        - name: switch action
+          script: bundle_switch
+          script_type: internal
+        - <<: *action
+          name: first action after switch
+      hc_acl:
+        - service: test_service
+          component: test_component
+          action: add
+
+    - <<: *upgrade
+      name: upgrade_with_config_and_disclaimer
+      versions:
+        min: 0.1
+        max: 1.5
+      ui_options:
+        disclaimer: "Are you really want to click me?"
+      scripts:
+        - <<: *action
+          name: first_action
+        - name: switch action
+          script: bundle_switch
+          script_type: internal
+        - <<: *action
+          name: first action after switch
+
+      config:
+        - name: somestring2
+          type: string
+          required: false
+        - name: someint2
+          type: integer
+          default: 122
+
+    - <<: *upgrade
+      name: upgrade_with_config_and_hc_acl_and_disclaimer
+      versions:
+        min: 0.1
+        max: 1.5
+      ui_options:
+        disclaimer: "Are you really want to click me?"
+      scripts:
+        - <<: *action
+          name: first_action
+        - name: switch action
+          script: bundle_switch
+          script_type: internal
+        - <<: *action
+          name: first action after switch
+      hc_acl:
+        - service: test_service
+          component: test_component
+          action: add
+      config:
+        - name: somestring2
+          type: string
+          required: false
+        - name: someint2
+          type: integer
+          default: 122
 
   config: &config
     - name: somestring
