ADCM-2895 Add ability to run python scripts and add empty python scrits to adcm bundle (#1816)
* ADCM-2895 Add ability to run python scripts and add empty python scrits to adcm bundle
* ADCM-2899 add python scripts to synchronize ldap user and groups and test connection (#1830)
* ADCM-2899 add python scripts to synchronize ldap user and groups and test connection
* ADCM-2920 add disabling cause no_ldap_settings
* ADCM-2895 add skipping synchronization of users with duplicated names

--- a/conf/adcm/config.yaml
+++ b/conf/adcm/config.yaml
@@ -4,6 +4,25 @@
   name: ADCM
   version: 1.7
 
+  actions:
+    run_ldap_sync:
+      type: job
+      script_type: python
+      script: python_scripts/run_ldap_sync.py
+      display_name: Run LDAP sync
+      allow_in_maintenance_mode: true
+      states:
+        available: any
+    test_ldap_connection:
+      type: job
+      script_type: python
+      script: python_scripts/testing_ldap_connection.py
+      display_name: Test LDAP connection
+      allow_to_terminate: true
+      allow_in_maintenance_mode: true
+      states:
+        available: any
+
   config:
     - name: "global"
       display_name: "Global Options"
