--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,7 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-# TODO: adcm-client >= needed to develop
+# TODO: adcm-client >= and adcm-pytest-plugin ~= needed to develop
 adcm-client>=2022.6.2.8
-adcm-pytest-plugin==4.18.0
+adcm-pytest-plugin~=4.19.0rc95
 attr==0.3.1
 allure-pytest==2.9.45
 docker==5.0.3
