--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,21 +1,25 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-adcm_client>=adcm_client-2022.6.2.8
-adcm-pytest-plugin~=4.18.0rc94
-attr
-allure-pytest
-docker
-jsonschema
-pylint_runner
-pytest
-pytest-lazy-fixture
-pytest-xdist
-pytest-rerunfailures
-pytest-timeout
-pytest-check
-pyyaml
-requests
-requests-toolbelt
-selenium~=3.141.0
-multipledispatch
-rstr
-genson
+# TODO: adcm-client >= and adcm-pytest-plugin ~= needed to develop
+adcm-client>=2022.6.2.8
+adcm-pytest-plugin~=4.20
+attr==0.3.1
+allure-pytest==2.9.45
+docker==5.0.3
+jsonschema==4.6.1
+pylint==2.14.4
+pytest==6.2.5
+pytest-asyncio==0.18.3
+pytest-lazy-fixture==0.6.3
+pytest-xdist==2.5.0
+pytest-rerunfailures==10.2
+pytest-timeout==2.1.0
+pytest-check==1.0.5
+python-ldap==3.4.0
+PyYAML==6.0
+requests==2.28.1
+requests-toolbelt==0.9.1
+selenium==3.141.0
+multipledispatch==0.6.0
+rstr==3.2.0
+genson==1.2.2
+websockets==10.3
