ADCM-2967 Exclude LDAP tests from regular launch

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -9,4 +9,5 @@ markers =
     regression: mark a test/module that tests known bug
     only_clean_adcm: mark a test/module to run it only with clean ADCM
     extra_rbac: mark an RBAC related test/module to exclude it from full run
+    ldap: ADCM-LDAP integration related tests
     include_firefox: test given ui test case on both Chrome and Firefox browsers
