--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,11 +1,12 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
 # TODO: adcm-client >= needed to develop
-adcm-client>=2022.6.2.8
+adcm-client~=2022.7.25.7.dev0
 adcm-pytest-plugin==4.18.0
 attr==0.3.1
 allure-pytest==2.9.45
 docker==5.0.3
 jsonschema==4.6.1
+Jinja2==3.1.2
 pylint==2.14.4
 pytest==6.2.5
 pytest-lazy-fixture==0.6.3
