ADCM-2977 Tests on CREATE operations audit: RBAC objects + added cases with DENIED result

--- a/tests/functional/audit/scenarios/create_load_upload.yaml
+++ b/tests/functional/audit/scenarios/create_load_upload.yaml
@@ -12,10 +12,26 @@
 
 settings:
   process-type: exact
-  start-from-first: matched  # to ignore ADCM config save that makes no sense for this scenario
+  # to ignore ADCM config save and user creation
+  # that makes no sense for this scenario
+  start-from-first: matched
 
 operations:
   # upload/load incorrect bundles
+  - &denied_upload
+    create:
+      what:
+        type: bundle
+      how: upload
+    result: denied
+    user: {{ username }}
+  - &denied_load
+    create:
+      what:
+        type: bundle
+      how: load
+    result: denied
+    user: {{ username }}
   - &upload_bundle
     create:
       what:
@@ -27,16 +43,24 @@ operations:
         type: bundle
       how: load
     result: fail
+  - <<: *denied_upload
+  - <<: *denied_load
   - <<: *upload_bundle
   - <<: *load_bundle_fail
   # upload/load correct bundles
+  - <<: *denied_upload
+  - <<: *denied_load
   - <<: *upload_bundle
   - &load_bundle
     <<: *load_bundle_fail
     result: success
+  - <<: *denied_upload
+  - <<: *denied_load
   - <<: *upload_bundle
   - <<: *load_bundle
   # provide incorrect data for request
+  - <<: *denied_upload
+  - <<: *denied_load
   - <<: *upload_bundle
     result: fail
   - <<: *load_bundle_fail
