--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: '21.5b1'
+    rev: '22.1.0'
     hooks:
       - id: black
+        additional_dependencies: ['click==8.0.4']
         language_version: python3.8
         files: '^python/'
